packages/components/src/components/switch/switch.scss
@use "@db-ui/foundations/build/scss/variables";
@use "@db-ui/foundations/build/scss/colors";
@use "@db-ui/foundations/build/scss/fonts";
@use "@db-ui/foundations/build/scss/helpers";
@use "@db-ui/foundations/build/scss/icons";
@use "../../styles/form-components";

$switch-fixed-padding: helpers.px-to-rem(2);

$switch-inactive-thumb-size: calc(
	#{form-components.$font-size-height} - #{$switch-fixed-padding} * 2
);

$switch-active-thumb-size: calc(#{form-components.$font-size-height});

$checked-active-transition-size: calc(
	#{form-components.$font-size-height} - #{$switch-fixed-padding} * 2
);

%active-transition {
	&::before {
		inline-size: calc(
			#{$switch-active-thumb-size} - #{$switch-fixed-padding} * 2 + #{variables.$db-spacing-fixed-2xs}
		);
		margin: 0;
	}

	&:checked {
		&::before {
			block-size: $checked-active-transition-size;
		}
	}
}

.db-switch {
	@include form-components.set-default-check-element(check);

	user-select: none;

	// This is needed when clicking on the label instead of the input
	@include helpers.active {
		> input {
			@extend %active-transition;
		}
	}

	> input {
		--db-icon-margin-start: 0;
		--thumb-offset-x: #{$switch-fixed-padding};

		@extend %db-overwrite-font-size-sm;

		@include icons.set-icon("cross", "after");

		appearance: none;
		inline-size: calc(
			#{form-components.$font-size-height} * 2 + #{$switch-fixed-padding}
		);
		block-size: form-components.$font-size-height;
		box-sizing: content-box;
		display: flex;
		align-items: center;
		gap: $switch-fixed-padding;
		background-color: colors.$db-current-color-bg-transparent-full-enabled;
		border-radius: variables.$db-border-radius-full;

		&::after {
			visibility: hidden;
			align-self: center;
			aspect-ratio: 1;
		}

		// thumb
		&::before {
			content: "O";
			text-align: center;
			align-content: center;
			aspect-ratio: 1;
			block-size: $switch-inactive-thumb-size;
			background-color: colors.$db-current-color-on-bg-enabled;
			color: colors.$db-current-color-on-bg-enabled;
			border-radius: variables.$db-border-radius-full;
			transform: translateX(var(--thumb-offset-x));
			margin-inline-end: calc(
				#{$switch-active-thumb-size} - #{$switch-inactive-thumb-size}
			);

			@media screen and (prefers-reduced-motion: no-preference) {
				transition:
					margin variables.$db-transition-duration-fast
						variables.$db-transition-timing-emotional,
					inline-size variables.$db-transition-duration-fast
						variables.$db-transition-timing-emotional,
					block-size variables.$db-transition-duration-fast
						variables.$db-transition-timing-emotional,
					transform variables.$db-transition-duration-fast
						variables.$db-transition-timing-emotional;
			}
		}

		/* positioned at the end of the track: track length - 100% (thumb width) */
		&:checked {
			--thumb-offset-x: calc(100% + #{$switch-fixed-padding});

			@include colors.set-current-colors(
				colors.$db-current-color-on-bg-enabled,
				colors.$db-current-color-bg-lvl-1-enabled,
				colors.$db-current-color-on-bg-hover,
				colors.$db-current-color-on-bg-pressed
			);

			border-color: colors.$db-current-color-on-bg-enabled;

			@include helpers.hover {
				border-color: colors.$db-current-color-on-bg-hover;
			}

			@include helpers.active {
				border-color: colors.$db-current-color-on-bg-pressed;
			}

			&::before {
				block-size: $switch-active-thumb-size;
				background-color: colors.$db-current-color-bg-lvl-1-enabled;
				color: colors.$db-current-color-bg-lvl-1-enabled;
				margin: 0;
			}
		}

		&:focus-visible {
			// Overwrite default border-radius
			border-radius: variables.$db-border-radius-full;
		}

		&[data-aid-icon]:not(:checked)::after {
			--db-icon-after: attr(data-aid-icon);
		}

		&[data-aid-icon-after]:checked::after {
			--db-icon-after: attr(data-aid-icon-after);
		}
	}

	&[data-variant="hidden"] {
		gap: 0;
	}

	&[data-size="small"] {
		gap: variables.$db-spacing-fixed-2xs;

		> input {
			@extend %db-overwrite-font-size-xs;
		}
	}

	&[data-emphasis="strong"] {
		> input {
			--db-check-element-border-color: #{colors.$db-current-color-bg-transparent-full-enabled};

			@extend %db-critical-variables;
			@extend %db-critical-contrast-low;

			border-color: colors.$db-current-color-contrast-low-enabled;

			@include helpers.hover {
				background-color: colors.$db-current-color-contrast-low-hover;
				border-color: colors.$db-current-color-contrast-low-hover;
			}

			@include helpers.active {
				background-color: colors.$db-current-color-contrast-low-pressed;
				border-color: colors.$db-current-color-contrast-low-pressed;

				&::before {
					block-size: $checked-active-transition-size;
				}
			}

			&:not(:checked) {
				--thumb-offset-x: 0;
			}

			&:checked {
				@extend %db-successful-variables;
				@extend %db-successful-contrast-low;

				&::before {
					background-color: colors.$db-current-color-on-contrast-enabled;
				}
			}

			&::before {
				background-color: colors.$db-current-color-on-contrast-enabled;
				block-size: $switch-active-thumb-size;
				margin: 0;
			}
		}
	}

	&[data-emphasis="strong"],
	&[data-visual-aid="true"] {
		> input {
			&::after {
				visibility: visible;
				block-size: $switch-active-thumb-size;
			}

			&:checked {
				@include icons.set-icon("check", "after");

				&::after {
					transform: translateX(
						calc(-100% - #{$switch-fixed-padding})
					);
					block-size: $switch-active-thumb-size;
				}
			}
		}
	}
}

